--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Hardik Kardam",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ssh2": "^1.11.0"
   },
   "devDependencies": {
